[package]
name = "bio-launch"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bio_launch"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
enable-log = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
spl-math = {version="0.2.0", features = [ "no-entrypoint" ]}
solana-program = "1.16.27"
thiserror = "1.0"
enum_dispatch = "0.3.7"
num-derive = "0.4.2"
num-traits = "0.2"
arrayref = "0.3.6"
borsh = "1.5.1"
const_str_to_pubkey = "=0.1.1"